--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "qrcode": "^1.5.4",
     "whatsapp-web.js": "^1.28.0",
     "wwebjs-mongo": "^1.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
